added location for img and word guessing + wins/losses

--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
 </head>
 <body>
 
+  <h1>United States Hangman</h1>
+
+  <div id="stateImg"></div>
+
+  <div id="guessarray"></div>
+
+  <p id="guessedletters">You've guessed: </p>
+
+  <p id="wins">Wins: </p>
+
+  <p id="losses">Losses: </p>
+
 </body>
 </html>
