--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 
   <h1>United States Hangman</h1>
 
-  <div id="stateImg"></div>
+  <div id="state-img"></div>
 
-  <div id="guessarray"></div>
+  <div id="guess-array"></div>
 
-  <p id="guessedletters">You've guessed: </p>
+  <p id="guessed-letters">You've guessed: </p>
 
   <p id="wins">Wins: </p>
 
   <p id="losses">Losses: </p>
+
+  <input type="button" id="reset" value="New Word"></input>
 
 </body>
 </html>
