added onclick to button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <p id="losses">Losses: </p>
 
-  <input type="button" id="reset" value="New Word"></input>
+  <input type="button" id="reset" value="New Word" onclick="newWord()"></input>
 
 </body>
 </html>
