--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Hangman Game</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
-  <script type="text/javascript" src="assets/javascript/game.js"></script>
 </head>
 <body>
 
@@ -15,7 +14,7 @@
 
   <div id="guess-array"></div>
 
-  <p id="guessed-letters">You've guessed: </p>
+  <p>You've guessed: <span id="guessed-letters"></span></p>
 
   <p id="wins">Wins: </p>
 
@@ -23,5 +22,6 @@
 
   <input type="button" id="reset" value="New Word" onclick="newWord()"></input>
 
+  <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
