--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
   <div id="guess-array"></div>
 
+  <p>Guesses Left: <span id="guess-left"></span></p>
+
   <p>You've guessed: <span id="guessed-letters"></span></p>
 
   <p id="wins">Wins: </p>
